--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,12 @@ crate-type = ["cdylib"]
 [dependencies]
 nvim-oxi = { version = "0.4.2", features = ["neovim-0-9", "libuv"] }
 serde = "1.0.201"
+tokio = { version = "1.37.0", features = ["full"] }
+tokio-tungstenite = { version = "0.21.0", features = [] }
+lazy_static = "1.4.0"
+parking_lot = "0.12.2"
+uuid = { version = "1.8.0", features = [
+    "v4",                # Lets you generate random UUIDs
+    "fast-rng",          # Use a faster (but still sufficiently random) RNG
+    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
+] }
