--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
-nvim-oxi = { version = "0.4.2", features = ["neovim-0-9", "libuv"] }
+nvim-oxi = { version = "0.4.2", features = ["neovim-0-9", "libuv", "mlua"] }
 serde = "1.0.201"
 tokio = { version = "1.37.0", features = ["full"] }
 tokio-tungstenite = { version = "0.21.0", features = [] }
@@ -18,3 +18,4 @@ uuid = { version = "1.8.0", features = [
     "fast-rng",          # Use a faster (but still sufficiently random) RNG
     "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
 ] }
+mlua = "0.9.7"
