--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,7 @@ uuid = { version = "1.8.0", features = [
 mlua = "0.9.7"
 url = "2.5.0"
 futures-util = "0.3.30"
+futures-channel = "0.3.30"
+log = "0.4.21"
+log4rs = { version = "1.3.0", features = ["file_appender"] }
+log-panics = "2.1.0"
