feat: add basic lua wrapper for websocket client

--- a/rust/Makefile
+++ b/rust/Makefile
@@ -1,4 +1,4 @@
 build:
 	cargo build
 	mkdir -p lua
-	mv ./target/debug/libwebsocket_nvim.dylib ./lua/websocket_nvim.so
+	mv ./target/debug/libwebsocket_ffi.dylib ./lua/websocket_ffi.so
